--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
